# os2-guest

./: CMakeLists.txt  README.md  backdoor.asm  backdoor.c  backdoor.h  build.cmd  config.h.in  copypaste.cpp  copypaste.h  guest.c  guest.cpp  guest.h  host.c  host.cpp  host.h  log.c  log.cpp  log.h  main.cpp  makefile  os2-guest.c  vmtools.cpp  vmtoolsctl.c  vmtoolsctl.cpp  vmtoolsd.c  vmtoolsd.cpp  vmtypes.h
docs/: readme.txt
ovt/: CMakeLists.txt  pointer.cpp  pointer.h
